*  Release 0.1
	* Fixed Bug #1081089: 'Cleanup spacing in code'.
	* Fixed Bug #1081980: 'Move the game database code to an ORM'.
	* Fixed Bug #1082033: 'Add an about page'.
	* Fixed Bug #1082555: 'Make full screen work with F11'.
	* Fixed Bug #1081095: 'Cleanup the routing and breadcrumbs'.
	* Fixed Bug #1084251: 'Selection of games by letter'.
	* Fixed Bug #1081080: 'Make it so games can be added with a file selector too'.
	* Fixed Bug #1090202: 'Make it show an alert when nacl crashes'.
