@@ -7,4 +7,5 @@
 	* Fixed Bug #1084251: 'Selection of games by letter'.
 	* Fixed Bug #1081080: 'Make it so games can be added with a file selector too'.
 	* Fixed Bug #1090202: 'Make it show an alert when nacl crashes'.
+	* Fixed Bug #1090995: 'Store roms in File System instead of IndexedDB for speed'.
 
